--- a/public/register.html
+++ b/public/register.html
@@ -5,10 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>这是Node</title>
+  <style>
+    input{
+      width:200px;
+      height:30px;
+      padding:2px 10px;
+      margin:10px
+    }
+  </style>
 </head>
 <body>
   <form action="/register" method="post">
-    用户名:<input name="uname"/><br>
+    用户名:<input name="uname" autofocus/><br>
     密码:<input name="pwd" /><br>
     <input type="submit" value="提交">
   </form>
